--- a/.dein/dein.toml
+++ b/.dein/dein.toml
@@ -1,8 +1,9 @@
 [[plugins]]
-repo = 'scrooloose/nerdtree'
+repo = 'preservim/nerdtree'
 hook_add = '''
-  let NERDTreeShowHidden=1
-    nnoremap <silent><C-a> :NERDTreeFind<CR>:vertical res 30<CR>
+    let NERDTreeShowHidden=1
+    nnoremap <silent><C-a> :NERDTreeToggle <CR>
+
 '''
 
 [[plugins]]
@@ -16,6 +17,18 @@ hook_add = '''
     let g:airline#extensions#tabline#fnamemod = ':t'
     let g:airline_powerline_fonts = 1
     let g:bufferline_echo = 0
+    let g:airline#extensions#tabline#buffer_idx_format = {
+      \ '0': '0 ',
+      \ '1': '1 ',
+      \ '2': '2 ',
+      \ '3': '3 ',
+      \ '4': '4 ',
+      \ '5': '5 ',
+      \ '6': '6 ',
+      \ '7': '7 ',
+      \ '8': '8 ',
+      \ '9': '9 '
+      \}
 '''
 
 [[plugins]]
@@ -43,7 +56,6 @@ repo = 'simeji/winresizer'
 repo = 'cocopon/iceberg.vim'
 hook_add = '''
   colorscheme iceberg
-
 '''
 [[plugins]]
 repo = 'edkolev/tmuxline.vim'
@@ -53,7 +65,7 @@ hook_add = '''
     \'c'    : ['#(whoami)', '#(uptime | cud -d " " -f 1,2,3)'],
     \'win'  : ['#I', '#W'],
     \'cwin' : ['#I', '#W', '#F'],
-    \'x'    : '##',
+    \'x'    : '#{cpu_icon}',
     \'y'    : ['%H:%M:%S', '%m/%d(%a)', '%Y'],
     \'z'    : '#H'}
   let g:tmuxline_theme = 'iceberg'
