--- a/.dein/dein.toml
+++ b/.dein/dein.toml
@@ -3,7 +3,7 @@ repo = 'preservim/nerdtree'
 hook_add = '''
     let NERDTreeShowHidden=1
     nnoremap <silent><C-a> :NERDTreeToggle <CR>
-
+ autocmd bufenter * if (winnr("$") == 1 && exists("b:NERDTree") && b:NERDTree.isTabTree()) | q | endif
 '''
 
 [[plugins]]
