--- a/.dein/dein.toml
+++ b/.dein/dein.toml
@@ -60,13 +60,17 @@ hook_add = '''
 [[plugins]]
 repo = 'edkolev/tmuxline.vim'
 hook_add = '''
+  let g:airline#extensions#tmuxline#enabled = 0 "change 1 for genarate tmuxline.conf
+  let g:airline#extensions#tmuxline#snapshot_file = "~/dotfiles/.tmux/tmuxline.conf"
   let g:tmuxline_preset = {
     \'a'    : '#S',
     \'c'    : ['#(whoami)', '#(uptime | cud -d " " -f 1,2,3)'],
     \'win'  : ['#I', '#W'],
     \'cwin' : ['#I', '#W', '#F'],
-    \'x'    : '#{cpu_icon}',
+    \'x'    : '#{cpu_icon}#{cpu_percentage}',
     \'y'    : ['%H:%M:%S', '%m/%d(%a)', '%Y'],
-    \'z'    : '#H'}
+    \'z'    : '#H',
+    \'options'  :{'status-interval' : 1 }
+    \}
   let g:tmuxline_theme = 'iceberg'
-'''
+  '''
