generato fix separator for wsltty in ja-jp

--- a/.tmux/tmuxline.conf
+++ b/.tmux/tmuxline.conf
@@ -1,5 +1,5 @@
 # This tmux statusbar config was created by tmuxline.vim
-# on Sun, 16 Feb 2020
+# on Mon, 17 Feb 2020
 
 set -g status-justify "centre"
 set -g status "on"
@@ -16,7 +16,7 @@ set -g status-left-length "100"
 setw -g window-status-activity-style "none,fg=colour245,bg=colour233"
 setw -g window-status-separator ""
 setw -g window-status-style "none,fg=colour238,bg=colour233"
-set -g status-left "#[fg=colour234,bg=colour245] #S #[fg=colour245,bg=colour233,nobold,nounderscore,noitalics]#[fg=colour238,bg=colour233] #(whoami)  #(uptime | cud -d \" \" -f 1,2,3) #[fg=colour233,bg=colour233,nobold,nounderscore,noitalics]"
-set -g status-right "#[fg=colour233,bg=colour233,nobold,nounderscore,noitalics]#[fg=colour238,bg=colour233] #{cpu_icon}#{cpu_percentage} #[fg=colour236,bg=colour233,nobold,nounderscore,noitalics]#[fg=colour242,bg=colour236] %H:%M:%S  %m/%d(%a)  %Y #[fg=colour245,bg=colour236,nobold,nounderscore,noitalics]#[fg=colour234,bg=colour245] #H "
+set -g status-left "#[fg=colour234,bg=colour245] #S #[fg=colour245,bg=colour236,nobold,nounderscore,noitalics]#[fg=colour242,bg=colour236] #W #[fg=colour236,bg=colour233,nobold,nounderscore,noitalics]#[fg=colour238,bg=colour233] #(whoami)  #(uptime | cud -d \" \" -f 1,2,3) #[fg=colour233,bg=colour233,nobold,nounderscore,noitalics]"
+set -g status-right "#[fg=colour233,bg=colour233,nobold,nounderscore,noitalics] #[fg=colour238,bg=colour233]#{cpu_icon}#{cpu_percentage} #[fg=colour236,bg=colour233,nobold,nounderscore,noitalics] #[fg=colour242,bg=colour236] %a   %Y/%m/%d   %H:%M:%S #[fg=colour245,bg=colour236,nobold,nounderscore,noitalics] #[fg=colour234,bg=colour245] #H "
 setw -g window-status-format "#[fg=colour233,bg=colour233,nobold,nounderscore,noitalics]#[default] #I  #W #[fg=colour233,bg=colour233,nobold,nounderscore,noitalics]"
 setw -g window-status-current-format "#[fg=colour233,bg=colour236,nobold,nounderscore,noitalics]#[fg=colour242,bg=colour236] #I  #W  #F #[fg=colour236,bg=colour233,nobold,nounderscore,noitalics]"
