add background option

--- a/.dein/dein.toml
+++ b/.dein/dein.toml
@@ -58,6 +58,7 @@ repo = 'simeji/winresizer'
 [[plugins]]
 repo = 'cocopon/iceberg.vim'
 hook_add = '''
+  set background=dark
   colorscheme iceberg
 '''
 [[plugins]]
