fix enable 24bit color

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,6 +1,10 @@
 # シェルを設定
 set-option -g default-shell /bin/zsh
 
+#24bit color
+set -g default-terminal "tmux-256color"
+set -ga terminal-overrides ",*256col*:Tc"
+
 #ステータスバーの表示設定
 source-file ~/.tmux/tmuxline.conf
 
