--- a/.tmux/tmuxline.conf
+++ b/.tmux/tmuxline.conf
@@ -1,22 +1,22 @@
 # This tmux statusbar config was created by tmuxline.vim
-# on 水, 19  2月 2020
+# on 水, 20  5月 2020
 
 set -g status-justify "centre"
 set -g status "on"
 set -g status-left-style "none"
-set -g message-command-style "fg=colour242,bg=colour236"
+set -g message-command-style "fg=#6b7089,bg=#2e313f"
 set -g status-interval "1"
 set -g status-right-style "none"
-set -g pane-active-border-style "fg=colour245"
-set -g status-style "none,bg=colour233"
-set -g message-style "fg=colour242,bg=colour236"
-set -g pane-border-style "fg=colour236"
+set -g pane-active-border-style "fg=#818596"
+set -g status-style "none,bg=#0f1117"
+set -g message-style "fg=#6b7089,bg=#2e313f"
+set -g pane-border-style "fg=#2e313f"
 set -g status-right-length "100"
 set -g status-left-length "100"
-setw -g window-status-activity-style "none,fg=colour245,bg=colour233"
+setw -g window-status-activity-style "none,fg=#818596,bg=#0f1117"
 setw -g window-status-separator ""
-setw -g window-status-style "none,fg=colour238,bg=colour233"
-set -g status-left "#[fg=colour234,bg=colour245] #S #[fg=colour245,bg=colour236,nobold,nounderscore,noitalics]#[fg=colour242,bg=colour236] #W #[fg=colour236,bg=colour233,nobold,nounderscore,noitalics]#[fg=colour238,bg=colour233] #(whoami)  #(uptime | cud -d \" \" -f 1,2,3) #[fg=colour233,bg=colour233,nobold,nounderscore,noitalics]"
-set -g status-right "#[fg=colour233,bg=colour233,nobold,nounderscore,noitalics] #[fg=colour238,bg=colour233]#{cpu_icon}#{cpu_percentage} #[fg=colour236,bg=colour233,nobold,nounderscore,noitalics] #[fg=colour242,bg=colour236] %a   %Y/%m/%d   %H:%M:%S #[fg=colour245,bg=colour236,nobold,nounderscore,noitalics] #[fg=colour234,bg=colour245] #H "
-setw -g window-status-format "#[fg=colour233,bg=colour233,nobold,nounderscore,noitalics]#[default] #I  #W #[fg=colour233,bg=colour233,nobold,nounderscore,noitalics]"
-setw -g window-status-current-format "#[fg=colour233,bg=colour236,nobold,nounderscore,noitalics]#[fg=colour242,bg=colour236] #I  #W  #F #[fg=colour236,bg=colour233,nobold,nounderscore,noitalics]"
+setw -g window-status-style "none,fg=#3e445e,bg=#0f1117"
+set -g status-left "#[fg=#17171b,bg=#818596] #S #[fg=#818596,bg=#2e313f,nobold,nounderscore,noitalics]#[fg=#6b7089,bg=#2e313f] #W #[fg=#2e313f,bg=#0f1117,nobold,nounderscore,noitalics]#[fg=#3e445e,bg=#0f1117] #(whoami)  #(uptime | cud -d \" \" -f 1,2,3) #[fg=#0f1117,bg=#0f1117,nobold,nounderscore,noitalics]"
+set -g status-right "#[fg=#0f1117,bg=#0f1117,nobold,nounderscore,noitalics] #[fg=#3e445e,bg=#0f1117]#{cpu_icon}#{cpu_percentage} #[fg=#2e313f,bg=#0f1117,nobold,nounderscore,noitalics] #[fg=#6b7089,bg=#2e313f] %a   %Y/%m/%d   %H:%M:%S #[fg=#818596,bg=#2e313f,nobold,nounderscore,noitalics] #[fg=#17171b,bg=#818596] #H "
+setw -g window-status-format "#[fg=#0f1117,bg=#0f1117,nobold,nounderscore,noitalics]#[default] #I  #W #[fg=#0f1117,bg=#0f1117,nobold,nounderscore,noitalics]"
+setw -g window-status-current-format "#[fg=#0f1117,bg=#2e313f,nobold,nounderscore,noitalics]#[fg=#6b7089,bg=#2e313f] #I  #W  #F #[fg=#2e313f,bg=#0f1117,nobold,nounderscore,noitalics]"
