--- a/.dein/dein.toml
+++ b/.dein/dein.toml
@@ -66,10 +66,13 @@ repo = 'edkolev/tmuxline.vim'
 hook_add = '''
   let g:airline#extensions#tmuxline#enabled = 0 "change 1 for genarate tmuxline.conf
   let g:airline#extensions#tmuxline#snapshot_file = "~/dotfiles/.tmux/tmuxline.conf"
-    let g:tmuxline_separators = {
-      \ 'right' : ' ',
-      \ 'right_alt' : '  ',
-      \ 'space' : ' '}
+  if &ambiwidth=="double"
+      let g:tmuxline_separators = {
+        \ 'right' : ' ',
+        \ 'right_alt' : '  ',
+        \ 'space' : ' '
+      \}
+  endif
   let g:tmuxline_preset = {
     \'a'    : '#S',
     \'b'    : '#W',
@@ -82,4 +85,4 @@ hook_add = '''
     \'options'  :{'status-interval' : 1 }
     \}
   let g:tmuxline_theme = 'iceberg'
-  '''
+'''
