fix NerdTree folder icon

--- a/.dein/dein.toml
+++ b/.dein/dein.toml
@@ -38,6 +38,11 @@ hook_add = '''
 repo = 'luochen1990/rainbow'
 hook_add = '''
     let g:rainbow_active = 1
+    let g:rainbow_conf = {
+      \'separately': {
+        \'nerdtree': 0,
+      \	}
+    \}
 '''
 
 [[plugins]]
